<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LazPlay</string>
    <string name="login_subtitle">&gt; MOBILE_LAUNCHER_AUTH</string>
    <string name="identifier_hint">Email or username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="login_fields_required">Enter email/username and password</string>
    <string name="login_failed">Login failed</string>
    <string name="nav_store">Store</string>
    <string name="nav_library">Library</string>
    <string name="nav_settings">Settings</string>
    <string name="library_empty">No Android games in your library.\nClaim games from the Store tab.</string>
    <string name="settings_title">Settings</string>
    <string name="clear_cache">Clear download cache</string>
    <string name="logout">Log out</string>
    <string name="download">Download</string>
    <string name="download_channel_name">Game downloads</string>
    <string name="downloading_game">Downloading %1$s</string>
    <string name="download_progress">%1$d%%</string>
</resources>
